Allow users to submit their favorite song

--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -1,4 +1,4 @@
-<form>
+<form method="post" action="/songs">
 	<div>
 		<label>Artist:</label>
 		<input type="text" name="artist">
@@ -9,7 +9,7 @@
 	</div>
 	<div>
 		<label>Url:</label>
-		<input> type="text" name="url">
+		<input type="text" name="url">
 	</div>
 	<div>
 		<input type="submit" value="Submit">
