--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -1,3 +1,14 @@
+<% if @song && @song.errors.any? %>
+	<div>
+		<strong>Some issues with your song, please fix:</strong>
+		<ul>
+			<% @song.errors.full_songs.each do |song| %>
+				<li><%= message %></li>
+			<% end %>
+		</ul>
+	</div>
+<% end %>
+
 <form method="post" action="/songs">
 	<div>
 		<label>Artist:</label>
